--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ background:         'assets/img/placeholder-big.jpg'
 tiled_bg:           false   # Set this true if you want to tile your background image, otherwise it will be covered
 locale:             en_US
 baseurl:            ''
-url:                https://taylantatli.github.io/Moon
+url:                https://snrnsrk5.github.io/
 
 # Jekyll
 permalink:          /:title/
